suspend failing
s2idle basic test fails while evicting pinned BO's in [xe_bo_evict_all-> ttm_bo_validate]
/* Moving of pinned BOs is forbidden */
if (bo->pin_count)
return -EINVAL;
[ 168.884092] [IGT] xe_pm: starting subtest s2idle-basic
[ 169.086767] PM: suspend entry (s2idle)
[ 169.091848] Filesystems sync: 0.005 seconds
[ 169.094847] Freezing user space processes
[ 169.097911] Freezing user space processes completed (elapsed 0.003 seconds)
[ 169.097984] OOM killer disabled.
[ 169.097989] Freezing remaining freezable tasks
[ 169.099744] Freezing remaining freezable tasks completed (elapsed 0.001 seconds)
[ 169.099850] printk: Suspending console(s) (use no_console_suspend to debug)
[ 169.153231] e1000e: EEE TX LPI TIMER: 00000000
[ 169.154091] e1000e: EEE TX LPI TIMER: 00000011
[ 169.156590] xe 0000:03:00.0: PM: pci_pm_suspend(): xe_pci_suspend+0x0/0x50 [xe] returns -22
[ 169.156757] xe 0000:03:00.0: PM: dpm_run_callback(): pci_pm_suspend+0x0/0x220 returns -22
[ 169.156772] xe 0000:03:00.0: PM: failed to suspend async: error -22
[ 169.536944] PM: Some devices failed to suspend, or early wake event detected
[ 169.557258] serial 00:06: activated
[ 169.568684] nvme nvme0: 6/0/0 default/read/poll queues
[ 169.786907] atkbd serio0: Failed to deactivate keyboard on isa0060/serio0
[ 169.896269] ata3: SATA link down (SStatus 4 SControl 300)
[ 169.896347] ata2: SATA link down (SStatus 4 SControl 300)
[ 169.896384] ata4: SATA link down (SStatus 4 SControl 300)
[ 170.161996] atkbd serio0: Failed to enable keyboard on isa0060/serio0
[ 170.274126] OOM killer enabled.
[ 170.274132] Restarting tasks ... done.
[ 170.278232] random: crng reseeded on system resumption
[ 170.494974] PM: suspend exit
[ 170.684221] [IGT] xe_pm: exiting, ret=98